[metadata]
name = retropq
version = 1.0.0
author = Aleksandar Krastev
author_email = aleks.tcr@gmail.com
description = A retroactive priority queue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/6851-2021/retroactive-priority-queue
project_urls =
    Bug Tracker = https://github.com/6851-2021/retroactive-priority-queue/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = retropq
python_requires = >=3.9
